<resources>
    <string name="app_name">lienardr_projet</string>
    <string name="title_activity_login">Choix du compte</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_add_button">AJOUTER UN NOUVEL ELEVE</string>
    <string name="login_title">Choix du compte :</string>
    <string name="login_subtitle">Elèves :</string>
    <string name="register_titre">Créer un compte :</string>
    <string name="register_valider">VALIDER</string>
    <string name="register_placholder_nom">Nom</string>
    <string name="register_placeholder_prenom">Prenom</string>
    <string name="main_titre">Choix du type d\'exercice :</string>
    <string name="main_bouton_maths">TABLES DE MULTIPLICATIONS</string>
    <string name="main_boutton_CG">CALCULS LIBRES</string>
    <string name="choixtable_titre">Choisissez la table à travailler :</string>
    <string name="choixtable_valider">VALIDER LA TABLE</string>
    <string name="table_mult_valider">VALIDER</string>
    <string name="erreur_titre">ERREUR(S) !!</string>
    <string name="erreur_nberreurs">Nombre d\'erreur(s) :</string>
    <string name="erreur_corriger">CORRIGER MES ERREURS</string>
    <string name="erreur_changertable">CHANGER LES PARAMETRES DE L\'EXERCICE</string>
    <string name="felicitation_titre">FELICITATIONS !!</string>
    <string name="felicitations_corriger">CHANGER LES PARAMETRES DE L\'EXERCICE</string>
    <string name="felicitation_changerexo">CHANGER D\'EXERCICE</string>
    <string name="ccl_tv_titre">Paramétrage de l\'exercice</string>
    <string name="ccl_b_moins">NON</string>
    <string name="ccl_rb11">10</string>
    <string name="ccl_rb12">100</string>
    <string name="ccl_rb13">1000</string>
    <string name="ccl_rb14">10000</string>
    <string name="ccl_rb21">Additions</string>
    <string name="ccl_rb22">Soustractions</string>
    <string name="ccl_rb23">Multiplications</string>
    <string name="ccl_tv_moins">Autoriser les valeurs négatives ?</string>
    <string name="ccl_tv_taille">Valeur maximale des operands :</string>
    <string name="ccl_tv_op">Types de calculs:</string>
    <string name="ccl_b_valider">PASSER A L\'EXERCICE</string>
    <string name="ccl_valider">VALIDER</string>
    <string name="choixqcm_titre">Choix du thème :</string>
    <string name="qcm_rb1">Littérature</string>
    <string name="qcm_rb2">Français</string>
    <string name="qcm_rb3">Culture générale</string>
    <string name="qcm_valider">PASSER AU QCM</string>
    <string name="button">QCM</string>
</resources>
