<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChoixQCM">

    <TextView
        android:id="@+id/choixqcm_titre"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:gravity="center"
        android:text="@string/choixqcm_titre"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/qcm_rg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/qcm_rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/qcm_rb1" />

        <RadioButton
            android:id="@+id/qcm_rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/qcm_rb2" />

        <RadioButton
            android:id="@+id/qcm_rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/qcm_rb3" />

    </RadioGroup>

    <Button
        android:id="@+id/qcm_valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="RedirectQCM"
        android:text="@string/qcm_valider" />
</LinearLayout>