<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FelicitationActivity">

    <TextView
        android:id="@+id/felicitation_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/felicitation_titre"
        android:textSize="36sp" />

    <Button
        android:id="@+id/felicitation_changertable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/felicitations_corriger"
        android:onClick="choixTable"/>

    <Button
        android:id="@+id/felicitation_changerexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/felicitation_changerexo"
        android:onClick="choixExo"/>

</LinearLayout>