<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/login_subtitle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

    <ListView
        android:id="@+id/userlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical" />

    <Button
        android:id="@+id/login_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="RedirectRegisterActivity"
        android:text="@string/login_add_button" />

</LinearLayout>